refactor: 자바 11 버전으로 맞춤